--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -7,6 +7,5 @@
     <TextView
         android:id="@+id/id_tv_racename"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Dummy" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
